first-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webapp
spec:
  containers: 
    - name: webapp
    - image: richardchesterwood/k8s-fleetman-webapp-angular:release0
